// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change orientation 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="vertical"
    class="css-1n8n8cf"
    data-chakra-component="CBox"
  />
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="horizontal"
    class="css-boncrs"
    data-chakra-component="CBox"
  />
</DocumentFragment>
`;
